# p450_experiment

./: CMakeLists.txt  README.md  package.xml
config/mavros_config/: px4_pluginlists_gps.yaml
config/prometheus_control_config/: px4_sender.yaml  px4_sender_outdoor.yaml
config/prometheus_detection_config/: camera_param.yaml
launch/: p450_vio_ground.launch  p450_vio_onboard.launch
launch_basic/: p450_circle_det.launch  p450_gps_onboard.launch  p450_landpad_det.launch  p450_vio_onboard.launch
launch_control/: p450_gps_control.launch
launch_detection/: p450_indoor_circle_tracking.launch  p450_indoor_landing_static_target.launch
launch_planning/: p450_indoor_astar_2dlidar.launch  tf_transform.launch
px4_firmware/: amovlab_p450_default.px4
