<?xml version="1.0"?>
<package format="2">
  <name>p450_experiment</name>
  <version>0.0.0</version>
  <description>The prometheus_450 package</description>

  <maintainer email="eason473867143@gmail.com">Eason Yi</maintainer>
  <author email="eason473867143@gmail.com">Eason Yi</author>
  <license>TODO</license>

  <url type="website">http://www.amovauto.com/</url>
  <url type="repository">https://github.com/amov-lab/p450_experiment.git</url>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>




  <export>

  </export>
</package>
